# outlook-mcp

./: .gitignore  README.md
.github/workflows/: ci.yml  publish-pypi.yml
ar-mail-management/: README.md  architecture-overview.md  codemie-analysis.md  confluence-alignment.md  data-privacy.md  integration-review.md  requirements-review.md  research-notes.md  review-notes.md
ar-mail-management/UC-ai-Instructions/: ar-mail-management-agent-prompt.md
ar-mail-management/decisions/: ADR-001-email-categorization-approach.md  ADR-002-human-in-the-loop-design.md  ADR-003-thread-context-management.md  ADR-004-agent-design.md  ADR-005-outlook-integration-pattern.md  ADR-006-ui-triggered-email-processing-delegated-mcp.md  ADR-007-mcp-pii-redaction-strategy.md  ADR-008-taxonomy-reconciliation.md  README.md
ar-mail-management/diagrams/: ar-mail-context.mermaid  ar-mail-diagrams.drawio
ar-mail-management/diagrams/components/: ar-mail-component-diagram.mermaid  ar-mail-context-injection-diagram.mermaid
ar-mail-management/diagrams/flows/: ar-mail-flow-action-routing-matrix.mermaid  ar-mail-flow-admin-inquiry.mermaid  ar-mail-flow-approval-ui.mermaid  ar-mail-flow-classification-decision-tree.mermaid  ar-mail-flow-email-processing.mermaid  ar-mail-flow-escalation-nodraft.mermaid  ar-mail-flow-invoice-lifecycle.mermaid  ar-mail-flow-multi-invoice-thread.mermaid  ar-mail-flow-payment-lifecycle.mermaid  ar-mail-flow-pii-redaction.mermaid  ar-mail-flow-sap-ui-trigger.mermaid  ar-mail-flow-ui-trigger-mcp.mermaid
ar-mail-management/diagrams/states/: ar-mail-approval-routing-state-machine.mermaid  ar-mail-email-category-state-machine.mermaid
ar-mail-management/implementation-plans/: architecture.md  codemie-assistant-setup.md  workflow.md
ar-mail-management/implementation-plans/assistants/: 00-orchestrator-multi-agent.md  00-orchestrator.md  01-thread-summarizer.md  02-email-classifier.md  03-response-drafter.md  04-action-router.md  05-review-presenter.md
ar-mail-management/prompts/: ActionRouter.md  EmailClassifier.md  ResponseDrafter.md  ReviewPresenter.md  ThreadSummarizer.md
ar-mail-management/skills/: ar-mcp-tools-skill.md  ar-taxonomy-skill.md
langgraph-mcp-tester/: .env.example  README.md  pyproject.toml
langgraph-mcp-tester/src/langgraph_mcp_tester/: __init__.py  agent.py  cli.py  client.py  config.py  llm_factory.py  mcp_connection.py  scenarios.py
langgraph-mcp-tester/tests/: test_agent.py  test_cli.py  test_llm_factory.py  test_mcp_connection.py  test_outlook_client.py  test_scenarios.py
outlook-mcp-server/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
outlook-mcp-server/src/outlook_mcp/: __init__.py  client.py  config.py  oauth_device.py  server.py
outlook-mcp-server/src/outlook_mcp/auth/: __init__.py  graph_client.py  oauth_msal.py  oauth_routes.py  oauth_session.py  token_handler.py
outlook-mcp-server/src/outlook_mcp/models/: __init__.py  email.py  errors.py
outlook-mcp-server/src/outlook_mcp/pii/: __init__.py  redactor.py
outlook-mcp-server/src/outlook_mcp/tools/: _common.py  _email_prompt.py  _notify.py  email_classifier.py  email_drafter.py  email_extractor.py  email_reader.py  email_summarizer.py  email_writer.py  mail_query_params.py
outlook-mcp-server/tests/: conftest.py  test_classification_result.py  test_client.py  test_common.py  test_config.py  test_email_classifier.py  test_email_drafter.py  test_email_extractor.py  test_email_prompt.py  test_email_reader.py  test_email_summarizer.py  test_email_writer.py  test_mail_query_params.py  test_notify.py  test_oauth_session.py  test_pii_redactor.py  test_token_handler.py
